# 1kh

./: .gitignore  CLI_GUIDE.md  CONTRIBUTING.md  FOUNDATION.md  README.md  pyproject.toml  run_tests.py  test_executor_metrics.py  test_metrics_standalone.py
archive/thousandhand_v0/: BACKLOG.md  BK005_book_sales_copy.md  CH001_chat_scope.md  CONSTITUTION.md  HUMAN_BLOCKED.md  MKT005_episode1_script.md  PHO001_service_definitions.md  README.md  thousandhand.py
archive/thousandhand_v1/: README.md  SIMPLIFIED_SETUP.md  backlog.md  config.json  dashboard.md  milliarch.md  milliarch.py  milliprime-n8n-architecture.md  morning_brief.py  north_star.md  paul_oracle.md  thousandhand.py
archive/thousandhand_v2/: ARTIFACT_TECHNICAL_REFERENCE.md  ARTIFACT_VISUAL_GUIDE.md  FOUNDATION.md  LAYER_ARTIFACTS.md  README.md  README_ARTIFACTS.md  TESTING.md  TH_PRIMER.md  pytest.ini  requirements-dev.txt
cli/: __init__.py  main.py
cli/commands/: forecast.py  init.py  projects.py  resources.py  run.py
core/: __init__.py  ceremony.py  claude_client.py  conversation.py  dashboard.py  forecast.py  models.py  report.py  runner.py  system_state.py
docs/: DECISIONS.md  DESIGN_DECISIONS.md  ROADMAP.md  TESTING_STRATEGY.md
temporal/: __init__.py  client.py
temporal/activities/: __init__.py  (+2 more)
tests/: TEST_SCENARIOS.md  __init__.py  test_conversation.py  test_intent.py  test_resources.py
thousandhand_v3/: ARCH_V3.md  DRAFT_INTERMEDIATE_ARTIFACTS.md  EXECUTOR_STANDARDS.md  OPENING_CEREMONY.md  ORCHESTRATOR_STANDARDS.md  README.md  REFLECTION.md  package.json
thousandhand_v4/: PUMP.md
(+118 files in other folders)
